<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	
	<packaging>pom</packaging>
	
	<artifactId>mrprez</artifactId>
	<groupId>com.mrprez</groupId>
	<version>1.3-SNAPSHOT</version>
	
	<!-- test push 2 -->

	<scm>
		<connection>scm:git:git://github.com/mrprez/mrprez.git</connection>
		<developerConnection>scm:git:ssh://github.com/mrprez/mrprez.git</developerConnection>
	  <tag>HEAD</tag>
  </scm>
	
	<repositories>
		<repository>
			<id>MrPrezDeployRepo</id>
			<url>http://www.mrprez.fr/nexus/content/repositories/releases/</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>
		<repository>
			<id>MrPrezDeploySnapshot</id>
			<url>http://www.mrprez.fr/nexus/content/repositories/snapshots/</url>
		</repository>
		<repository>
			<id>MrPrezThirdParty</id>
			<url>http://www.mrprez.fr/nexus/content/repositories/thirdparty/</url>
		</repository>
	</repositories>
	<pluginRepositories>
		<pluginRepository>
			<id>MrPrezPluginRepo</id>
			<url>http://www.mrprez.fr/nexus/content/repositories/releases/</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</pluginRepository>
	</pluginRepositories>
	<distributionManagement>
		<repository>
			<id>MrPrezDeployRepo</id>
			<url>http://www.mrprez.fr/nexus/content/repositories/releases/</url>
		</repository>
		<snapshotRepository>
			<id>MrPrezDeploySnapshot</id>
			<url>http://www.mrprez.fr/nexus/content/repositories/snapshots/</url>
		</snapshotRepository>
	</distributionManagement>
	
	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>2.5.1</version>
					<configuration>
						<source>1.6</source>
						<target>1.6</target>
						<encoding>UTF-8</encoding>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>2.17</version>
					<configuration>
						<argLine>-Xms256m -Xmx1024m -XX:MaxPermSize=512m</argLine>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>
	
	
</project>
